--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "fake-server": "json-server --watch db.json"
   },
   "dependencies": {
+    "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/datetimepicker": "^2.5.0",
+    "@react-native-community/netinfo": "^5.9.4",
     "lodash": "4.17.15",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-navigation": "^6.8.0",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-ui-lib": "^5.10.2",
     "remx": "^3.0.0-rc.21"
   },
   "devDependencies": {
