--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,13 +12,16 @@ buildscript {
         google()
         jcenter()
     }
+    ext.kotlinVersion = '1.3.72' 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
         classpath('com.android.tools.build:gradle:4.0.0')
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
@@ -36,5 +39,9 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+        maven {
+            // All of Detox' artifacts are provided via the npm module
+            url "$rootDir/../node_modules/detox/Detox-android"
+        }
     }
 }
