--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "start-e2e": "RN_SRC_EXT=e2e.js react-native start",
     "test": "jest",
+    "e2e": "detox test",
     "lint": "eslint .",
     "fake-server": "json-server --watch db.json"
   },
@@ -29,7 +31,8 @@
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "24.9.0",
     "eslint": "6.8.0",
-    "jest": "24.9.0",
+    "jest": "^24.9.0",
+    "jest-circus": "^26.1.0",
     "metro-react-native-babel-preset": "0.58.0",
     "react-test-renderer": "16.11.0"
   },
